<resources>

    <!--  앱 정보 -->
    <string name="app_name">PingTolk</string>
    <string name="app_subtitle">가족과 함께하는 프라이빗 채팅</string>

    <!--  입력창 힌트 -->
    <string name="hint_nickname">닉네임을 입력하세요</string>
    <string name="hint_family_code">가족코드를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>
    <string name="hint_message">메시지를 입력하세요</string>

    <!--  버튼 텍스트 -->
    <string name="btn_create">방 만들기</string>
    <string name="btn_join">입장하기</string>
    <string name="btn_send">전송</string>
    <string name="btn_save">저장</string>
    <string name="btn_edit">수정</string>
    <string name="btn_back">뒤로가기</string>
    <string name="btn_share">공유하기</string>
    <string name="btn_record">음성 녹음</string>
    <string name="btn_attach">파일 첨부</string>
    <string name="btn_favorite">즐겨찾기</string>
    <string name="btn_settings">설정</string>
    <string name="btn_button">Create button</string>
    <string name="btn_menu">메뉴</string>
    <string name="btn_logout">로그아웃</string>

    <!--  상단 타이틀 -->
    <string name="room_name">Ping Room</string>
    <string name="room_code">FAMILY123</string>
    <string name="room_list_title">채팅방 목록</string>

    <!--  채팅 UI -->
    <string name="text_sender">보낸사람</string>
    <string name="message_hint">메시지를 입력하세요</string>
    <string name="auto_reply_prefix">[자동응답]</string>
    <string name="urgent_mark">[긴급]</string>

    <!--  샘플 메시지 -->
    <string name="sample_time">오후 6:30</string>
    <string name="sample_my_msg">보낸 메시지</string>
    <string name="sample_other_sender">아빠</string>
    <string name="sample_other_msg">받은 메시지</string>
    <string name="sample_date">2025년 4월 9일</string>

    <!-- ️ 설정/자동응답 -->
    <string name="auto_reply_title">부재중 자동응답 설정</string>
    <string name="auto_reply_message_hint">자동 응답 멘트를 입력하세요</string>
    <string name="auto_reply_time_start">시작 시간 선택</string>
    <string name="auto_reply_time_end">종료 시간 선택</string>
    <string name="auto_reply_sample">지금은 자리에 없습니다. 나중에 연락드릴게요!</string>
    <string name="btn_image">이미지 전송</string>


    <!--  공유 텍스트 -->
    <string name="share_invite_title">PingTalk 채팅방 초대</string>
    <string name="share_invite_message">함께 채팅해요! 앱 설치하기: https://play.google.com/store/apps/details?id=com.example.pingtolk</string>

    <!--  채팅방 리스트 필터링 -->
    <string name="check_favorite_only">즐겨찾기만 보기</string>
    <string name="spinner_sort_label">정렬 기준</string>
    <string name="textNewChatAlert">새로운 채팅이 도착했습니다!</string>


    <!--  프로필 설정 -->
    <string name="profile_title">프로필 설정</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="label_nickname">닉네임</string>
    <string name="nickname_sample">김민지</string>
    <string name="label_language">언어</string>
    <string name="language_korean">한국어</string>
    <string name="language_english">영어</string>
    <string name="desc_profile_image">프로필 이미지</string>
    <string name="room_prefix">Ping Room: %1$s</string>
    <string name="label_created_by">생성자: %1$s</string>
    <string name="check_entered_only">입장한 방만 보기</string>
    <string name="text_members_title">참여 중인 멤버</string>
    <string name="menu_chat_info">Chat Info</string>
    <string name="menu_logout">Leave Room</string>






    <!--  시스템설정 -->
    <string-array name="language_options">
        <item>한국어</item>
        <item>English</item>
    </string-array>

    <!-- 다크모드 라벨 -->
    <string name="label_dark_mode">다크모드</string>

    <!-- 저장 완료 토스트 -->
    <string name="toast_saved">저장되었습니다</string>
    <!-- 알림 토스트 -->
    <string name="toast_notification_on">알림이 켜졌습니다</string>
    <string name="toast_notification_off">알림이 꺼졌습니다</string>
    <string name="toast_upload_fail">이미지 업로드에 실패했습니다</string>
    <string name="toast_permission_denied">갤러리 접근 권한이 필요합니다</string>

    <!-- 개인정보보호 / 도움말 -->
    <string name="label_privacy">개인정보 보호 설정 화면입니다</string>
    <string name="label_help">도움말 화면입니다</string>
    <string name="label_notification">알림</string>





</resources>
