<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#F4F7FB">

    <!-- 앱 로고 -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="147dp"
        android:layout_height="131dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_chat_logo" />

    <!-- 서브 타이틀 -->
    <TextView
        android:id="@+id/appSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textSize="14sp"
        android:textColor="#666666"
        android:layout_marginBottom="24dp"/>

    <!-- 닉네임 입력 -->
    <EditText
        android:id="@+id/editNickname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_nickname"
        android:background="@drawable/bg_edittext"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:layout_marginBottom="12dp"/>

    <!-- 비밀번호 입력 -->
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:layout_marginBottom="24dp"/>



    <!-- 입장하기 버튼 (배경 블루 + 흰 글자) -->
    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_join"
        android:backgroundTint="#247CFF"
        android:textColor="#FFFFFF"/>
</LinearLayout>
